# six-library

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .regenerate_python_bindings.py  0_build  CHANGES  CMakeLists-CODA.txt  CMakeLists-NITRO.txt  CMakeLists.txt  CMakeSettings.json  README  README.md  README.txt  ReleaseNotes.md  VERSION  coda-oss.sln  common_build.cmake  conanfile.py  copy_externals.csh  dot-github-workflows-macos.yml  nitro.sln  processFiles.py  remove_extras.csh  remove_foss.csh  setup.py  six.sln  sync_externals.csh  test_create_sicd_from_mem_32f.sicd  waf  wscript
c++/: Doxyfile  Makefile.in  README  SConstruct  configure  configure.in  linkLibs.pl  wscript
c++/include/import/: except.h  mt.h  str.h  sys.h
c++/nitf/: Makefile.in  SConstruct  project.cfg  wscript
c++/nitf/apps/: show_nitf++.cpp
c++/nitf/source/: BandInfo.cpp  BandSource.cpp  BlockingInfo.cpp  BufferedReader.cpp  BufferedWriter.cpp  ComponentInfo.cpp  DESegment.cpp  DESubheader.cpp  DataSource.cpp  DateTime.cpp  DecompressionInterface.cpp  DownSampler.cpp  FileHeader.cpp  FileSecurity.cpp  GraphicSegment.cpp  GraphicSubheader.cpp  Handle.cpp  HashTable.cpp  IOHandle.cpp  IOInterface.cpp  ImageReader.cpp  ImageSegment.cpp  ImageSource.cpp  ImageSubheader.cpp  ImageWriter.cpp  LabelSegment.cpp  LabelSubheader.cpp  List.cpp  LookupTable.cpp  PluginRegistry.cpp  RESegment.cpp  RESubheader.cpp  Reader.cpp  Record.cpp  SegmentReader.cpp  SegmentSource.cpp  SegmentWriter.cpp  SubWindow.cpp  TRE.cpp  TextSegment.cpp  (+4 more)
c++/nitf/tests/: test_buffered_write.cpp  test_create.cpp  test_date.cpp  test_date_set.cpp  test_des_create++.cpp  test_des_create.cpp  test_direct_block_round_trip.cpp  test_dump_record.cpp  test_fh.cpp  test_fhdr_clone.cpp  test_file_source.cpp  test_functional.cpp  test_functional.h  test_handles.cpp  test_hash_table_1++.cpp  test_hash_table_1.cpp  test_image_loading.cpp  test_io.cpp  test_list_1.cpp  test_list_2.cpp  test_mem_source.cpp  test_mt_record.cpp  test_read_acftb.cpp  test_ref_counts.cpp  test_round_trip.cpp  test_static_plugin.cpp  test_tre_mods.cpp  test_writer_3.cpp  test_writer_4.cpp  test_writer_5.cpp
c/cgm/: Makefile.in  SConstruct  configure  configure.in  wscript
c/cgm/source/: CircleElement.c  CircularArcCloseElement.c  CircularArcElement.c  Color.c  Element.c  Elements.c  EllipseElement.c  EllipticalArcCloseElement.c  EllipticalArcElement.c  FillAttributes.c  LineAttributes.c  Metafile.c  MetafileReader.c  MetafileWriter.c  NITFWriteHandler.c  Picture.c  PictureBody.c  PolyLineElement.c  PolySetElement.c  PolygonElement.c  Rectangle.c  RectangleElement.c  Text.c  TextAttributes.c  TextElement.c  Vertex.c  VertexClose.c
c/cgm/tests/: Makefile.in  test_add_cgm.c  test_extract_cgm.c  test_read_cgm.c  test_rt_cgm.c
c/nitf/: Doxyfile  Makefile.in  README.txt  SConstruct  configure  configure.in  wscript
c/nitf/apps/: getNITFVersion.c  get_nitf_version.c  image_footprint_kml.c  show_nitf.c
c/nitf/shared/: ACCHZB.c  ACCPOB.c  ACCVTB.c  ACFTA.c  ACFTB.c  AIMIDA.c  AIMIDB.c  AIPBCA.c  ASTORA.c  BANDSA.c  BCKGDA.c  BLOCKA.c  BNDPLB.c  CLCTNA.c  CLCTNB.c  CMETAA.c  ENGRDA.c  EXOPTA.c  EXPLTA.c  EXPLTB.c  GEOLOB.c  GEOPSB.c  HISTOA.c  ICHIPB.c  IMGDTA.c  IOMAPA.c  J2KCompress.c  J2KDecompress.c  J2KLRA.c  JITCID.c  MAPLOB.c  MENSRA.c  MENSRB.c  MPDSRA.c  MSTGTA.c  MTIRPA.c  MTIRPB.c  Makefile  Makefile.in  NBLOCA.c  (+43 more)
c/nitf/source/: BandInfo.c  BandSource.c  ComplexityLevel.c  ComponentInfo.c  DEReader.c  DESegment.c  DESubheader.c  DLLUnix.c  DLLWin32.c  DataSource.c  DateTime.c  Debug.c  DefaultTRE.c  DefaultUserSegment.c  DirectBlockSource.c  DirectoryUnix.c  DirectoryWin32.c  DownSampler.c  Error.c  Extensions.c  Field.c  FieldWarning.c  FileHeader.c  FileSecurity.c  GraphicSegment.c  GraphicSubheader.c  HashTable.c  IOHandleUnix.c  IOHandleWin32.c  IOInterface.c  ImageIO.c  ImageReader.c  ImageSegment.c  ImageSource.c  ImageSubheader.c  ImageWriter.c  IntStack.c  LabelSegment.c  LabelSubheader.c  List.c  (+29 more)
c/nitf/tests/: Makefile.in  Test.h  dummy_ext.txt  test_1band_rw_line.c  test_ImageIO.h  test_ImageIO_read_data.c  test_ImageIO_support.c  test_ImageIO_writePattern.c  test_add_masks.c  test_atoi.c  test_clevel.c  test_core_values.c  test_create.c  test_create_nitf.c  test_create_xmltre.c  test_date.c  test_datetime.c  test_debug_mem_1.c  test_des.c  test_des_create.c  test_des_read.c  test_des_write.c  test_dll_1.c  test_dump_masks.c  test_dump_record.c  test_ext_iter.c  test_extensions_1.c  test_fhdr_clone.c  test_field.c  test_field_set.c  test_fileIO.c  test_file_source.c  test_find_field.c  test_geo_utils.c  test_hash_table_1.c  test_hash_table_2.c  test_hash_table_clone.c  test_image_loading.c  test_image_source.c  test_imsub_clone.c  (+21 more)
c/nitf/unit-tests/: Makefile.in  check_all.c  check_all.h  check_field.c  check_list.c
c/nitf/unittests/: Makefile.in  Test.h  test_core_values.c  test_create.c  test_create_nitf.c  test_datetime.c  test_field.c  test_list.c  test_mem_source.c  test_tree.c  test_zero_field.c
mex/nitf/: README.txt  configure  configure.in  nitf_image.c  nitf_metadata.c  wscript
modules/c/: CMakeLists.txt  nitf-c.vcxproj  wscript
modules/c++/: CMakeLists.txt  Doxyfile  Makefile.in  coda-oss-lite.vcxproj  coda-oss-lite.vcxproj.filters  coda-oss.ruleset  coda-oss.vcxproj  coda-oss.vcxproj.filters  configure  configure.in  cpp.h  framework.h  nitf-c++.vcxproj  nitf-c++.vcxproj.filters  nitf.ruleset  pch.h  wscript
modules/c++/avx/: CMakeLists.txt  wscript
modules/c++/cli/: CMakeLists.txt  Makefile.in  project.cfg  wscript
modules/c++/config/: wscript
modules/c++/cphd/: wscript
modules/c++/dbi/: wscript
modules/c++/except/: CMakeLists.txt  SConstruct  project.cfg  wscript
modules/c++/gsl/: CMakeLists.txt
modules/c++/hdf5.lite/: CMakeLists.txt  wscript
modules/c++/include/: TestCase.h
modules/c++/io/: CMakeLists.txt  Makefile.in  SConstruct  project.cfg  wscript
modules/c++/logging/: CMakeLists.txt  SConstruct  project.cfg  wscript
modules/c++/math/: wscript
modules/java/: CMakeLists.txt  wscript
(+3527 files in other folders)
